# rib

./: 404.html  CONTRIBUTING.md  Cargo.toml  README.md  example-wit.html  guide.html  index.html  print.html  searcher-c2a407aa.js  searchindex-0e17447a.js  searchindex-1d3f980a.js  searchindex-32670914.js  searchindex-a85a8089.js  searchindex.js  searchindex.json  toc-5b89b1a8.js  toc.html
.github/workflows/: ci.yml  language-guide-pages.yml  release.yml
docs/: README.md  language-guide.md
docs/language-guide-book/: .gitignore  README.md  book.toml  build.sh
docs/language-guide-book/src/: SUMMARY.md  example.wit
rib-core/: Cargo.toml  README.md
rib-core/regression_tests/: lib.rs
rib-core/src/: call_type.rs  expr.rs  expr_arena.rs  function_name.rs  instance_type.rs  lib.rs  profile.rs  rib_type_error.rs  type_parameter.rs  value_and_type.rs  variable_id.rs  wasm_wave_text.rs  wave.rs  wit_type.rs
rib-core/src/analysis/: model.rs
rib-core/src/compiler/: byte_code.rs  compiler_output.rs  desugar.rs  ir.rs  mod.rs  type_with_unit.rs  worker_functions_in_rib.rs
rib-core/src/inferred_type/: mod.rs
rib-core/src/interpreter/: env.rs  interpreter_result.rs  interpreter_stack_value.rs  literal.rs  rib_function_invoke.rs  rib_interpreter.rs  stack.rs
rib-core/src/parser/: call.rs  literal.rs  mod.rs  rib_expr.rs  type_name.rs
rib-core/src/registry/: component_dependencies.rs  component_dependency.rs  component_dependency_key.rs  function_dictionary.rs  mod.rs  raw_type_registry.rs
rib-core/src/type_checker/: checker.rs  exhaustive_pattern_match.rs  invalid_function_args.rs  invalid_function_calls.rs  invalid_worker_name.rs  missing_fields.rs  mod.rs  unresolved_types.rs
rib-core/src/type_inference/: call_arguments_inference.rs  custom_instance_spec.rs  enum_inference.rs  errors.rs  expr_visitor.rs  global_input_inference.rs  global_variable_type_binding.rs  identifier_inference.rs  identify_instance_creation.rs  index_selection_type_binding.rs  inference_fix_point.rs  inferred_expr.rs  initial_arena_phase.rs  initial_phase.rs  instance_type_binding.rs  mod.rs  rib_input_type.rs  rib_output_type.rs  stateful_instance.rs  type_annotation_binding.rs  type_hint.rs  type_pull_up.rs  type_push_down.rs  type_unification.rs  variable_binding.rs  variant_inference.rs  worker_function_invocation.rs
rib-core/src/wit/: mod.rs
rib-lang/: Cargo.toml  README.md
rib-lang/regression_tests/: lib.rs
rib-lang/src/: call_type.rs  expr.rs  expr_arena.rs  function_name.rs  instance_type.rs  lib.rs  profile.rs  rib_source_span.rs  rib_type_error.rs  type_parameter.rs  value.rs  variable_id.rs  wasm_wave_text.rs  wave.rs  wit_type.rs
rib-lang/src/compiler/: byte_code.rs  compiler_output.rs  desugar.rs  ir.rs  mod.rs  type_with_unit.rs  worker_functions_in_rib.rs
rib-lang/src/inferred_type/: all_of.rs  mod.rs  type_internal.rs  type_origin.rs  unification.rs
rib-lang/src/interpreter/: env.rs  env_resolve.rs  eval.rs  instruction_cursor.rs  interpreter_input.rs  interpreter_result.rs  interpreter_stack_value.rs  literal.rs  mod.rs  rib_function_invoke.rs  rib_interpreter.rs  rib_runtime_error.rs  stack.rs
rib-lang/src/parser/: binary_op.rs  block_without_return.rs  boolean.rs  call.rs  comment.rs  cond.rs  errors.rs  flag.rs  identifier.rs  integer.rs  let_binding.rs  list_aggregation.rs  list_comprehension.rs  literal.rs  mod.rs  multi_line_code_block.rs  not.rs  optional.rs  pattern_match.rs  range_type.rs  record.rs  result.rs  rib_expr.rs  sequence.rs  tuple.rs  type_name.rs
rib-lang/src/registry/: component_dependency.rs  component_dependency_key.rs  function_dictionary.rs  raw_type_registry.rs
rib-lang/src/text/: mod.rs  writer.rs
rib-lang/src/type_checker/: checker.rs  exhaustive_pattern_match.rs  mod.rs  path.rs  unresolved_types.rs
rib-lang/src/type_inference/: call_arguments_inference.rs  custom_instance_spec.rs  enum_inference.rs  env_namespace.rs  errors.rs  global_input_inference.rs  global_variable_type_binding.rs  identifier_inference.rs  identify_instance_creation.rs  inference_fix_point.rs  inferred_expr.rs  initial_phase.rs  instance_type_binding.rs  mod.rs  rib_input_type.rs  rib_output_type.rs  stateful_instance.rs  type_annotation_binding.rs  type_hint.rs  type_pull_up.rs  type_push_down.rs  type_reset.rs  type_unification.rs  variable_binding.rs  variant_inference.rs  worker_function_invocation.rs
rib-lang/src/type_refinement/: mod.rs  precise_types.rs  refined_type.rs  type_extraction.rs
rib-repl/: Cargo.toml  README.md
rib-repl-golem/: Cargo.toml
rib-repl-golem/src/: component_api.rs  lib.rs  main.rs  worker_invoke.rs
rib-repl/src/: compiler.rs  dependency_manager.rs  eval.rs  export_path.rs  instance_name_gen.rs  invoke.rs  lib.rs  repl_printer.rs  repl_state.rs  rib_edit.rs  rib_repl.rs  rib_val.rs  runtime_value.rs  value_generator.rs
rib-repl/src/command/: builtin.rs
rib-repl/tests/: rib_val_roundtrip.rs  runtime_value_roundtrip.rs
wasms/: golem_example_agent.wasm
