[workspace]
resolver = "2"

members = [
    "rib-core",
    "rib-repl",
]

[workspace.dependencies]
rib-core = { version = "=0.0.0", path = "rib-core" }
rib-repl = { version = "=0.0.0", path = "rib-repl" }

anyhow = "1.0.97"
async-trait = "0.1.87"
bigdecimal = { version = "0.4.7", features = ["serde", "string-only"] }
clap = { version = "4.5.32", features = ["derive", "suggestions", "color", "help", "env"] }
colored = "3.0.0"
combine = "4.6.7"
convert_case = "0.8.0"
crossterm = "0.28.1"
dirs = "4.0.0"
lazy_static = "1.5.0"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.12.13", features = ["json"] }
rustyline = "15.0.0"
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
shell-words = "1.1.0"
test-r = { version = "3.0.3", default-features = true }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "io-std", "net", "tracing", "process"] }
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.15.1", features = ["serde", "v4", "v5", "v7"] }
wasm-wave = "0.244"
