[package]
name = "rib-core"
version = "0.0.0"
edition = "2021"

description = "Parser for Golem's Rib language"

license-file = "../LICENSE"

[features]
default = ["json_in_errors"]
json_in_errors = []

[dependencies]
async-trait = { workspace = true }
bigdecimal = { workspace = true }
la-arena = { workspace = true }
combine = { workspace = true }
lazy_static = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
wasm-wave = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }

[lib]
name = "rib"
path = "src/lib.rs"
harness = false

[[test]]
name = "rib_regression"
path = "regression_tests/lib.rs"
harness = false
