[package]
name = "golem-rib-repl"
version = "0.0.0"
edition = "2021"

description = "Repl for Rib language"

license-file = "../LICENSE"

[lib]
path = "src/lib.rs"
harness = false

[dependencies]
golem-rib = { workspace = true }
golem-wasm = { workspace = true, default-features = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
convert_case = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
rustyline = { workspace = true }
uuid = { workspace = true }
wasm-wave = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
