[package]
name = "rib-repl-golem"
version = "0.0.0"
edition = "2021"

description = "Golem integration for the Rib REPL - provides WorkerFunctionInvoke backed by Golem worker APIs"

license-file = "../LICENSE"

[[bin]]
name = "rib-repl"
path = "src/main.rs"

[dependencies]
rib-core = { workspace = true }
rib-repl = { workspace = true }
golem-wasm = { workspace = true, default-features = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
